--- a/.github/ISSUE_TEMPLATE/Bug-Template.yml
+++ b/.github/ISSUE_TEMPLATE/Bug-Template.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: Fill a bug report
-title: "[Bug]: "
+title: ""
 labels: ["bug", "triage"]
 projects: ["octo-org/1", "octo-org/44"]
 assignees:
